# quotes-bot

./: .env.template  .gitignore  1  Dockerfile  README.md  bot_instance.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 2025_02_27_1056-bc7dfb3f0f19_user_table.py  2025_02_27_1322-a5cfa2b68acf_authors_tables_created.py  2025_02_27_1405-762c13fb8d0b_quotes_table_added.py  2025_02_27_1500-f8df3657ad86_user_author_association.py  2025_02_27_1520-9769580aabf0_default_author_column_for_users_table_.py  2025_02_27_1556-8f41a95332c0_authors_name_rename.py  2025_02_27_1715-e78c7684d0d1_quote_quote_to_quote_quote_text.py  2025_03_03_1556-3951933a1a3f_frequency_mode_column_for_user_table_.py  2025_03_03_1749-c2306ee9c576_frequency_mode.py  2025_03_04_1409-966f37e3e76d_specific_times_changed_to_char.py  2025_03_04_1444-48291c77b07d_delete_settings_table.py  2025_03_04_1445-2b73c61588d5_create_settings_table.py
bot/: config.py  helpers.py  mysql_connection.py  mysql_connection_2.py  psql_connection_helper.py  sqlorm.py
bot/database/: crud.py  session_helper.py
bot/database/models/: __init__.py  author.py  (+5 more)
bot/handlers/: __init__.py  add_quote.py  callback_handlers.py  inline_handlers.py  quotes_handler.py  start.py  user_handlers.py
bot/layout/: callbacks.py  keyboard.py  keyboards.py
bot/middleware/: __init__.py  db.py  scheduler.py
bot/services/: __init__.py  scheduler.py
bot/sql/: models.py  mysql_connection.py  sqlorm.py
bot/states/: __init__.py  author_state.py  frequency_state.py  specific_time.py
(+5 files in other folders)
